--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PRISMIC_API_ENDPOINT = "https://criando-app-zero.prismic.io/api/v2"
+PRISMIC_ACCESS_TOKEN = "MC5ZNm9vM1JjQUFGUUNveG1Z.V--_ve-_vTk877-9LBnvv71vTO-_ve-_ve-_ve-_ve-_vUMEaWVRTU7vv716BTzvv71N77-977-977-9"
