--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watchAll",
-    "coverage": "jest --coverage",
-    "slicemachine": "start-slicemachine"
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
-    "@types/date-fns": "^2.6.0",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.19.0",
+    "js-cookie": "^2.2.1",
     "next": "10.0.7",
+    "nextjs-progressbar": "^0.0.8",
     "prismic-dom": "^2.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
